test/errors/function/ref_missing_args.np
def fn(x: int) -> int:
    return x


f = fn
x = f()
